--- a/movieapp/templates/movieapp/home.html
+++ b/movieapp/templates/movieapp/home.html
@@ -1,23 +1,12 @@
-{% extends 'movieapp/base.html' %}
-
-{% block content %}
-<h2 class="mb-4">All Movies</h2>
-
-<div class="row">
-    {% for item in movie_data %}
-        <div class="col-md-4">
-            <div class="card mb-4">
-                <div class="card-body">
-                    <h5 class="card-title">
-                        <a href="{% url 'movie_detail' item.movie.id %}">{{ item.movie.title }}</a>
-                    </h5>
-                    <p>{{ item.movie.description|truncatechars:100 }}</p>
-                    <p><strong>Genre:</strong> {{ item.movie.genre }}</p>
-                    <p><strong>Release Year:</strong> {{ item.movie.release_year }}</p>
-                    <p><strong>Average Rating:</strong> {{ item.avg_rating }}</p>
-                </div>
-            </div>
-        </div>
-    {% endfor %}
-</div>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cinescope - Movie Site</title>
+</head>
+<body>
+    <h1>Welcome to Cinescope</h1>
+    <p>Your movie site is running!</p>
+</body>
+</html>
